--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     />
     <link rel="manifest" href="./favicon_io/site.webmanifest" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Islom Numanov - Blog</title>
+    <title>Islom - Dev</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
